[gd_scene load_steps=4 format=3 uid="uid://c84plc3l7oskn"]

[ext_resource type="Script" path="res://addons/godottoycontrol/control_center/buttplug_control_center.gd" id="1_n8fkn"]
[ext_resource type="Script" path="res://addons/godottoycontrol/control_center/control_center_endpoints.gd" id="2_8dvpa"]
[ext_resource type="Script" path="res://addons/godottoycontrol/control_center/control_center_devices.gd" id="3_syeaa"]

[node name="buttplug_control_center" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n8fkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="host" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "localhost"

[node name="port" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "12345"

[node name="connect" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Connect"

[node name="stop" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Stop all devices"

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 95

[node name="log_textfield" type="RichTextLabel" parent="VBoxContainer/VSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
scroll_following = true

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 400

[node name="endpoints" type="Tree" parent="VBoxContainer/VSplitContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
hide_root = true
drop_mode_flags = 1
script = ExtResource("2_8dvpa")

[node name="devices" type="Tree" parent="VBoxContainer/VSplitContainer/HSplitContainer"]
layout_mode = 2
hide_root = true
script = ExtResource("3_syeaa")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/stop" to="." method="_on_stop_pressed"]
